# lazyvim-config

./: .gitignore  .luarc.json  README.md  init.lua  lazy-lock.json  lazyvim.json  pyproject.toml
lua/config/: keymaps.lua  lazy.lua  options.lua
lua/dianchia/: lazy.lua
lua/dianchia/core/: init.lua  keymaps.lua  options.lua
lua/dianchia/plugins/: colorscheme.lua  nvim-tree.lua
lua/dianchia/util/: init.lua
lua/plugins/: R-nvim.lua  alpha.lua  colorscheme.lua  conform.lua  crates.lua  dashboard-nvim.lua  lspconfig.lua  lualine.lua  mason-null-ls.lua  mason.lua  maximize.lua  none-ls.lua  null-ls.lua  nvim-colorizer.lua  nvim-lspconfig.lua  nvim-navic.lua  nvim-silicon.lua  nvim-surrround.lua  nvim-treesitter-textobjects.lua  nvim-treesitter.lua  rust-tools.lua  rust-vim.lua  telescope-fzf.lua  treesitter.lua  vim-maximizer.lua  which-key.lua
