[project]
name = "nvim"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "dianchia", email = "dianrui520@hotmail.com" }
]
dependencies = [
    "pynvim>=0.5.0",
    "jupyter>=1.1.1",
    "radian>=0.6.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
